[package]
name = "pong-deathmatch"
version = "0.1.0"
authors = ["Karl Johansson <karl.johansson@t2data.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
laminar = "0.4.0"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
ggez = "0.5.0"
crossbeam-channel = "0.4.0"
